# audioapp

./: .gitignore  AGENT.md  AGENTS.md  PROJECT-SPEC.md  README.md  _build_msvc.cmd  build_engine.bat  build_engine_lib.bat  build_engine_lib.cmd  build_lib.bat  build_msvc.cmd  build_only.bat  check_structure.py  flutter_test_output.txt
engine_juce/: CMakeLists.txt
engine_juce/include/audioapp/: AutomationPlayback.hpp  AutomationTypes.hpp  ClapAlgorithm.hpp  ClapGenerator.hpp  ClipContentPlayback.hpp  CrashAlgorithm.hpp  CrashGenerator.hpp  CymbalAlgorithm.hpp  CymbalGenerator.hpp  DeviceChain.hpp  DeviceChainAutomationModulation.hpp  DeviceChainOrchestrator.hpp  DeviceChainProcessor.hpp  DeviceChainScratch.hpp  DeviceState.hpp  DynamicsProcessor.hpp  EngineHost.hpp  FallbackPreviewOscillator.hpp  FrequencyFxProcessor.hpp  KickAlgorithm.hpp  KickGenerator.hpp  LfoTypes.hpp  LivePerformance.hpp  MasterMix.hpp  MetallicNoiseSynth.hpp  MidiClipPlayback.hpp  MidiDelay.hpp  MidiUtils.hpp  ModulationTypes.hpp  PhaseModSynth.hpp  PhaseModSynthAlgorithm.hpp  ProcessorGraph.hpp  ProjectArchive.hpp  ProjectEngine.hpp  ProjectJson.hpp  ResonatorBank.hpp  RoutingDevices.hpp  SampleBank.hpp  SamplePlayback.hpp  SamplePlaybackAlgorithm.hpp  (+11 more)
engine_juce/include/audioapp/commands/: CommandHandler.hpp  CommandRegistry.hpp
engine_juce/include/audioapp/devices/: BassSynthDeviceType.hpp  ClapGeneratorDeviceType.hpp  CompressorDeviceType.hpp  CrashGeneratorDeviceType.hpp  CymbalGeneratorDeviceType.hpp  DevicePanelTypes.hpp  DeviceParameterResult.hpp  DeviceRegistry.hpp  DeviceSlot.hpp  DeviceStripParams.hpp  DeviceTypeIds.hpp  ExpanderDeviceType.hpp  FilterDeviceType.hpp  FourBandEqDeviceType.hpp  FrequencyShifterDeviceType.hpp  GateDeviceType.hpp  IDeviceType.hpp  KickGeneratorDeviceType.hpp  LimiterDeviceType.hpp  MidiDelayDeviceType.hpp  OscillatorDeviceType.hpp  PhaseModSynthDeviceType.hpp  PlaybackBuildContext.hpp  ResonatorBankDeviceType.hpp  RoutingDeviceType.hpp  SamplerDeviceType.hpp  SnareGeneratorDeviceType.hpp  SubtractiveSynthDeviceType.hpp  TrackGainDeviceType.hpp  WavetableSynthDeviceType.hpp
engine_juce/include/audioapp/dsp/: AudioBlock.hpp  DeviceProcessor.hpp  ProcessContext.hpp  ProcessorArena.hpp
engine_juce/include/audioapp/effects/: BitcrusherDeviceType.hpp  BitcrusherParams.hpp  ChorusDeviceType.hpp  ChorusParams.hpp  DelayDeviceType.hpp  DelayParams.hpp  DistortionDeviceType.hpp  DistortionParams.hpp  EffectDeviceRegistration.hpp  EffectSnapshot.hpp  EffectTypes.hpp  PhaserDeviceType.hpp  PhaserParams.hpp  (+5 more)
engine_juce/src/: AutomationPlayback.cpp  ClapAlgorithm.cpp  ClapGenerator.cpp  CrashAlgorithm.cpp  CrashGenerator.cpp  CymbalAlgorithm.cpp  CymbalGenerator.cpp  DeviceChain.cpp  DeviceChainAutomationModulation.cpp  DeviceChainOrchestrator.cpp  DeviceChainProcessor.cpp  DynamicsProcessor.cpp  EngineHost.cpp  EngineHost_android.cpp  EngineHost_commands.cpp  EngineHost_juce.cpp  FallbackPreviewOscillator.cpp  FrequencyFxProcessor.cpp  KickAlgorithm.cpp  KickGenerator.cpp  LfoEngine.cpp  LivePerformance.cpp  MasterMix.cpp  MetallicNoiseSynth.cpp  MidiClipPlayback.cpp  PhaseModSynth.cpp  PhaseModSynthAlgorithm.cpp  ProcessorGraph.cpp  ProjectArchive.cpp  ProjectEngine.cpp  ProjectEngine_live.cpp  ProjectJson.cpp  ResonatorBank.cpp  SampleBank.cpp  SamplePlayback.cpp  SamplePlaybackAlgorithm.cpp  SamplerFilter.cpp  SnareAlgorithm.cpp  SnareGenerator.cpp  SubtractiveSynth.cpp  (+5 more)
engine_juce/src/commands/: CommandRegistry.cpp
engine_juce/src/devices/: BassSynthDeviceType.cpp  ClapGeneratorDeviceType.cpp  CompressorDeviceType.cpp  CrashGeneratorDeviceType.cpp  CymbalGeneratorDeviceType.cpp  DeviceRegistry.cpp  ExpanderDeviceType.cpp  FilterDeviceType.cpp  FourBandEqDeviceType.cpp  FrequencyShifterDeviceType.cpp  GateDeviceType.cpp  IDeviceType.cpp  KickGeneratorDeviceType.cpp  LimiterDeviceType.cpp  MidiDelayDeviceType.cpp  OscillatorDeviceType.cpp  PhaseModSynthDeviceType.cpp  ResonatorBankDeviceType.cpp  RoutingDeviceType.cpp  SamplerDeviceType.cpp  SnareGeneratorDeviceType.cpp  SubtractiveSynthDeviceType.cpp  TrackGainDeviceType.cpp  WavetableSynthDeviceType.cpp
engine_juce/src/effects/: BitcrusherDeviceType.cpp  ChorusDeviceType.cpp  DelayDeviceType.cpp  DistortionDeviceType.cpp  EffectDeviceRegistration.cpp  EffectSnapshot.cpp  PhaserDeviceType.cpp  ReverbDeviceType.cpp  TimeBasedEffectDeviceType.cpp  TremoloDeviceType.cpp
engine_juce/src/instruments/: PerNoteModulation.cpp
engine_juce/src/model/: AutomationClipStore.cpp  ClipRepository.cpp  TrackRepository.cpp
engine_juce/src/modulation/: AdrModulator.cpp  AdrModulatorType.cpp  AdsrModulator.cpp  AdsrModulatorType.cpp  CurveModulator.cpp  EnvelopeModulator.cpp  EnvelopeModulatorType.cpp  LfoModulator.cpp  LfoModulatorType.cpp  ModulationGraph.cpp  RandomGeneratorModulator.cpp  SequencerModulator.cpp
engine_juce/src/params/: ParamRegistry.cpp
engine_juce/src/snapshot/: SnapshotDelta.cpp
engine_juce/src/transport/: TransportController.cpp
engine_juce/tests/: JuceTestRunner.cpp  TestChainHelper.hpp  TestHelpers.h  adsr_modulator_test.cpp  autobroken_routing_test.cpp  automation_clip_drag_test.cpp  automation_clip_test.cpp  automation_filter_sweep_test.cpp  automation_sampler_filter_sweep_test.cpp  bass_synth_test.cpp  clap_generator_test.cpp  clip_length_test.cpp  clip_loop_content_test.cpp  clip_playback_regression_test.cpp  common_param_modulation_test.cpp  crash_generator_test.cpp  cymbal_generator_test.cpp  device_chain_test.cpp  device_registry_test.cpp  device_slot_serialization_test.cpp  device_types_test.cpp  dynamics_processor_test.cpp  effect_chorus_test.cpp  effect_delay_test.cpp  effect_device_automation_test.cpp  effect_device_modulation_test.cpp  effect_phaser_test.cpp  effect_reverb_test.cpp  engine_smoke_test.cpp  fallback_oscillator_test.cpp  filter_device_test.cpp  four_band_eq_test.cpp  frequency_fx_test.cpp  frequency_shifter_test.cpp  gain_pan_mod_auto_test.cpp  gate_device_test.cpp  group_track_test.cpp  kick_generator_test.cpp  lfo_modulation_test.cpp  lfo_polarity_test.cpp  (+30 more)
(+988 files in other folders)
